--- a/src/index.css
+++ b/src/index.css
@@ -47,9 +47,8 @@ ul li{
   min-height: 100px;
   background: #f2f2f2;
   font-size: 1.2rem;
-  /* background: #C9FFBF;
-  background: -webkit-linear-gradient(to right, #FFAFBD, #C9FFBF);
-  background: linear-gradient(to right, #FFAFBD, #C9FFBF); */
+  box-shadow: 5px 20px 20px 10px #ccc;
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .g-card-info:hover {
