--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ ul li{
   /* border-radius: 10px; */
   width: 340px;
   height: 248px;
-  transition: box-shadow 0.5s ease-in-out;
+  /*transition: box-shadow 0.5s ease-in-out;*/
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
 }
@@ -37,8 +37,8 @@ ul li{
   /* border-radius: 10px; */
   width: 340px;
   height: 248px;
-  box-shadow: 5px 20px 20px 10px rgb(170, 180, 180);
-  transition: box-shadow 0.5s ease-in-out;
+  /*box-shadow: 5px 20px 20px 10px rgb(170, 180, 180);
+  transition: box-shadow 0.5s ease-in-out;*/
 }
 
 .g-card-info {
@@ -47,13 +47,14 @@ ul li{
   min-height: 100px;
   background: #f2f2f2;
   font-size: 1.2rem;
-  box-shadow: 5px 20px 20px 10px #ccc;
-  transition: box-shadow 0.3s ease-in-out;
+  /*box-shadow: 5px 20px 20px 10px #ccc;
+  transition: box-shadow 0.3s ease-in-out;*/
 }
 
 .g-card-info:hover {
-  box-shadow: 5px 20px 20px 10px #ccc;
-  transition: box-shadow 0.3s ease-in-out;
+  /*box-shadow: 5px 20px 20px 10px #ccc;
+  transition: box-shadow 0.3s ease-in-out;*/
+  background: #f3f3f3;
 }
 
 
