--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ ul li{
   /* border-radius: 10px; */
   width: 340px;
   height: 248px;
+  transition: 0.8s ease-in-out;
   /*box-shadow: 5px 20px 20px 10px rgb(170, 180, 180);
   transition: box-shadow 0.5s ease-in-out;*/
 }
