--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,7 @@ ul li{
   width: 340px;
   height: 248px;
   /*transition: box-shadow 0.5s ease-in-out;*/
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
-  filter: grayscale(100%);
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.75));
 }
 
 .g-card-image:hover {
