--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ ul li{
   width: 340px;
   height: 248px;
   /*transition: box-shadow 0.5s ease-in-out;*/
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.65));
+  opacity: 0.3;
 }
 
 .g-card-image:hover {
