--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ ul li{
 }
 
 .g-card-image:hover {
+  opacity: 0;
   -webkit-filter: grayscale(0%); /* Safari 6.0 - 9.0 */
   filter: grayscale(0%);
   cursor: pointer;
