--- a/src/index.css
+++ b/src/index.css
@@ -168,22 +168,22 @@ ul li {
   }
 }*/
 
-@media screen and (max-width: 600px) {
+/*@media screen and (max-width: 600px) {
   .g-card-image {
-    /* border-radius: 10px; */
+    border-radius: 10px;
     width: 250px;
     height: 170px;
-    /*transition: box-shadow 0.5s ease-in-out;*/
+    transition: box-shadow 0.5s ease-in-out;
     opacity: 1;
   }
 }
 
 @media screen and (max-width: 500px) {
   .g-card-image {
-    /* border-radius: 10px; */
+    border-radius: 10px;
     width: 200px;
     height: 150px;
-    /*transition: box-shadow 0.5s ease-in-out;*/
+    transition: box-shadow 0.5s ease-in-out;
     opacity: 1;
   }
-}
+}*/
