--- a/src/App.css
+++ b/src/App.css
@@ -40,10 +40,10 @@ form {
 }
 
 .g-card-image {
-  /* border-radius: 10px; */
+  border-radius: 10px;
   width: 400px;
   height: 280px;
-  /*transition: box-shadow 0.5s ease-in-out;*/
+  transition: box-shadow 0.5s ease-in-out;
   opacity: 1;
 }
 
@@ -53,8 +53,8 @@ form {
   min-height: 100px;
   background: #f2f2f2;
   font-size: 1.2rem;
-  /*box-shadow: 5px 20px 20px 10px #ccc;
-  transition: box-shadow 0.3s ease-in-out;*/
+  box-shadow: 5px 20px 20px 10px #ccc;
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .g-card-title {
@@ -67,13 +67,13 @@ form {
   margin: 0px;
 }
 
-/*@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   .g-card,
   .g-card-image,
   .g-card-info {
-    margin-right: 50%;
-    width: 250px;
-    height: 170px;
+    margin-right: 4%;
+    width: 95%
+    height: 95%;
     opacity: 1;
   }
-}*/
+}
