--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ form {
   .g-card-image,
   .g-card-info {
     margin-right: 4%;
-    width: 95%
+    width: 95%;
     height: 95%;
     opacity: 1;
   }
