--- a/src/index.css
+++ b/src/index.css
@@ -57,7 +57,7 @@ ul li {
   .g-card-image,
   .g-card-info {
     margin-right: 5%;
-    width: 95%
+    width: 95%;
     height: 95%;
     opacity: 1;
   }
