--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,7 @@ form {
     opacity: 1;
   }
 }
+
+.g-card, .g-card-image, .g-card-info, .g-card-title, .g-card-sub-title:hover {
+  cursor: pointer;
+}
