--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #fff;
+  color: #000;
 }
 
 .App-link {
