--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,6 @@
 .App {
   text-align: center;
 }
-
 .App-logo {
   height: 38vmin;
 }
@@ -18,6 +17,9 @@
   color: #fff;
 }
 
+.App-link {
+  color: #09d5ac;
+}
 
 body {
   overflow-x: hidden !important;
